# Order-Block

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/compare/: Lightbox.tsx
frontend/src/components/folder-picker/: FolderBrowser.tsx
frontend/src/components/layout/: PageContainer.tsx  Sidebar.tsx
frontend/src/components/results/: BestPicksGrid.tsx  ClusterView.tsx  ImageCard.tsx  QualityOverview.tsx
frontend/src/components/ui/: scroll-morph-hero.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: DashboardPage.tsx  HeroPage.tsx  ProcessingPage.tsx  ResultsPage.tsx  SettingsPage.tsx
frontend/src/stores/: session-store.ts  settings-store.ts
order_block/: __init__.py  __main__.py  cli.py  file_manager.py  pipeline.py  reporter.py  utils.py
order_block/quality/: analyzer.py  scorer.py
order_block/selection/: best_pick.py
order_block/similarity/: clustering.py  embeddings.py  hashing.py
server/: __init__.py  __main__.py  config.py  main.py  models.py
server/database/: __init__.py  connection.py  models.py
server/routers/: images.py  processing.py  sessions.py
server/services/: processing_service.py  session_manager.py  thumbnail_service.py
tests/: test_pipeline.py  test_quality.py  test_similarity.py
ui/: app.py
